# dtnma-camp

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  apply_license.sh  build_docs.sh  pyproject.toml
.github/workflows/: build-integration-test.yaml  build-test.yaml  codeql.yml  docs.yaml
docs/: conf.py
src/camp/generators/: base.py  create_agent_c.py  create_gen_h.py  create_impl_c.py  create_impl_h.py  create_mgr_c.py  create_sql.py
src/camp/generators/lib/: campch.py  campch_roundtrip.py  campsettings.py  camputil.py
src/camp/tools/: camp.py
tests/: __init__.py  integration_test.py  test_generators.py  test_sql_integration.py  test_tools_camp.py  util.py
tests/integration_test/: conftest.py  test_c_integration.py  test_sql_integration.py  util.py
tests/unit_tests/: test_generators.py
